message with ai, code with ai for only user completed

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -130,9 +130,11 @@ body,
   height: 25px !important;
 }
 
-.icon-phone {
-  width: 16px !important;
-  height: 16px !important;
+.green-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: green;
 }
 
 .icon-chat {
